--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite build && vite preview --host"
+    "start": "vite build && vite --host"
   },
   "proxy": "http://localhost:80",
   "dependencies": {
